--- a/K2Field.SmartObjects.Services.CEP.K2CEPListenerService/packages.config
+++ b/K2Field.SmartObjects.Services.CEP.K2CEPListenerService/packages.config
@@ -2,6 +2,18 @@
 <packages>
   <package id="EntityFramework" version="6.1.1" targetFramework="net451" />
   <package id="EventStore.Client" version="3.0.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Cors" version="5.0.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.1.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.SignalR.SelfHost" version="2.1.2" targetFramework="net451" />
+  <package id="Microsoft.Owin" version="3.0.0" targetFramework="net451" />
+  <package id="Microsoft.Owin.Cors" version="3.0.0" targetFramework="net451" />
+  <package id="Microsoft.Owin.Diagnostics" version="2.0.1" targetFramework="net451" />
+  <package id="Microsoft.Owin.Host.HttpListener" version="2.0.1" targetFramework="net451" />
+  <package id="Microsoft.Owin.Hosting" version="2.0.1" targetFramework="net451" />
+  <package id="Microsoft.Owin.Security" version="2.0.1" targetFramework="net451" />
+  <package id="Microsoft.Owin.SelfHost" version="2.0.1" targetFramework="net451" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="2.0.3" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net451" />
+  <package id="Owin" version="1.0" targetFramework="net451" />
   <package id="WindowsAzure.ServiceBus" version="2.4.3.0" targetFramework="net451" />
 </packages>
