--- a/K2Field.SmartObjects.Services.CEP.Sandbox/K2Field.SmartObjects.Services.CEP.Sandbox.csproj
+++ b/K2Field.SmartObjects.Services.CEP.Sandbox/K2Field.SmartObjects.Services.CEP.Sandbox.csproj
@@ -57,6 +57,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\Program Files (x86)\K2 blackpearl\Host Server\Bin\SourceCode.Workflow.Client.dll</HintPath>
     </Reference>
+    <Reference Include="Splunk.Client">
+      <HintPath>..\packages\Splunk.Client.2.0.0\lib\portable-net45+win+wpa81\Splunk.Client.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.configuration" />
