--- a/K2Field.SmartObjects.Services.CEP.Sandbox/packages.config
+++ b/K2Field.SmartObjects.Services.CEP.Sandbox/packages.config
@@ -4,5 +4,6 @@
   <package id="EventStore.Client" version="3.0.0" targetFramework="net451" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="2.0.3" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.5" targetFramework="net451" />
+  <package id="Splunk.Client" version="2.0.0" targetFramework="net451" />
   <package id="WindowsAzure.ServiceBus" version="2.4.3.0" targetFramework="net451" />
 </packages>
