--- a/K2Field.SmartObjects.Services.CEP.K2CEPListenerService/packages.config
+++ b/K2Field.SmartObjects.Services.CEP.K2CEPListenerService/packages.config
@@ -2,9 +2,13 @@
 <packages>
   <package id="EntityFramework" version="6.1.1" targetFramework="net451" />
   <package id="EventStore.Client" version="3.0.0" targetFramework="net451" />
-  <package id="Microsoft.AspNet.Cors" version="5.0.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.SignalR.Core" version="2.1.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.SignalR.SelfHost" version="2.1.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.2" targetFramework="net451" />
   <package id="Microsoft.Owin" version="3.0.0" targetFramework="net451" />
   <package id="Microsoft.Owin.Cors" version="3.0.0" targetFramework="net451" />
   <package id="Microsoft.Owin.Diagnostics" version="2.0.1" targetFramework="net451" />
