--- a/K2Field.SmartObjects.Services.CEP.Sandbox/K2Field.SmartObjects.Services.CEP.Sandbox.csproj
+++ b/K2Field.SmartObjects.Services.CEP.Sandbox/K2Field.SmartObjects.Services.CEP.Sandbox.csproj
@@ -76,14 +76,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="EventStoreListener.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="IListener.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Content Include="SplunkListener.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -118,6 +121,10 @@
     <ProjectReference Include="..\K2Field.SmartObjects.Services.CEP.ES\K2Field.SmartObjects.Services.CEP.ES.csproj">
       <Project>{ff4368ae-37c3-4201-a857-d3dd0017cd8e}</Project>
       <Name>K2Field.SmartObjects.Services.CEP.ES</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\K2Field.SmartObjects.Services.CEP.ListenerInterface\K2Field.SmartObjects.Services.CEP.ListenerInterface.csproj">
+      <Project>{abe0fe58-9b03-4372-8970-a1f05611dfd1}</Project>
+      <Name>K2Field.SmartObjects.Services.CEP.ListenerInterface</Name>
     </ProjectReference>
     <ProjectReference Include="..\K2Field.SmartObjects.Services.CEP.Model\K2Field.SmartObjects.Services.CEP.Model.csproj">
       <Project>{a629a369-4f97-471b-9579-220ae5bd7d63}</Project>
