--- a/K2Field.SmartObjects.Services.CEP.Interfaces/K2Field.SmartObjects.Services.CEP.Interfaces.csproj
+++ b/K2Field.SmartObjects.Services.CEP.Interfaces/K2Field.SmartObjects.Services.CEP.Interfaces.csproj
@@ -2,15 +2,19 @@
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
+    <MinimumVisualStudioVersion>11.0</MinimumVisualStudioVersion>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{ABE0FE58-9B03-4372-8970-A1F05611DFD1}</ProjectGuid>
+    <ProjectGuid>{74698462-F4EF-4156-969F-54FDB836CA60}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>K2Field.SmartObjects.Services.CEP.ListenerInterface</RootNamespace>
-    <AssemblyName>K2Field.SmartObjects.Services.CEP.ListenerInterface</AssemblyName>
-    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
+    <RootNamespace>K2Field.SmartObjects.Services.CEP.Interfaces</RootNamespace>
+    <AssemblyName>K2Field.SmartObjects.Services.CEP.Interfaces</AssemblyName>
+    <DefaultLanguage>en-US</DefaultLanguage>
     <FileAlignment>512</FileAlignment>
+    <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
+    <TargetFrameworkProfile>Profile259</TargetFrameworkProfile>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -30,23 +34,22 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
+    <!-- A reference to the entire .NET Framework is automatically included -->
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EventChannel.cs" />
+    <Compile Include="IEvent.cs" />
+    <Compile Include="IEventAction.cs" />
+    <Compile Include="IEventActionConfiguration.cs" />
+    <Compile Include="IEventActionInstance.cs" />
+    <Compile Include="IEventChannel.cs" />
+    <Compile Include="IEventChannelInstance.cs" />
     <Compile Include="IEventListener.cs" />
     <Compile Include="IEventMessage.cs" />
-    <Compile Include="Log\EventLog.cs" />
-    <Compile Include="MessageReceivedArgs.cs" />
+    <Compile Include="IEventSource.cs" />
+    <Compile Include="IEventSourceInstance.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
